feat(backend): enhance Qwen model support by integrating external weight file handling, improving tensor parsing, and updating relevant tests